crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@if__if_false.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/if/if_false.panda
---
Ok(
    If(
        If {
            check: Bool(
                Bool {
                    b: false,
                },
            ),
            then: Int(
                Int {
                    n: 1,
                },
            ),
            els: Int(
                Int {
                    n: 0,
                },
            ),
        },
    ),
)
