crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@if__nested.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/if/nested.panda
---
Ok(
    If(
        If {
            check: Bool(
                Bool {
                    b: true,
                },
            ),
            then: If(
                If {
                    check: Bool(
                        Bool {
                            b: false,
                        },
                    ),
                    then: Str(
                        Str {
                            s: "foo",
                        },
                    ),
                    els: If(
                        If {
                            check: Bool(
                                Bool {
                                    b: false,
                                },
                            ),
                            then: Str(
                                Str {
                                    s: "bar",
                                },
                            ),
                            els: Str(
                                Str {
                                    s: "baz",
                                },
                            ),
                        },
                    ),
                },
            ),
            els: Str(
                Str {
                    s: "qux",
                },
            ),
        },
    ),
)
